--- a/package.json
+++ b/package.json
@@ -35,7 +35,12 @@
     "vite": "^4.4.6"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "sort-by": "^1.2.0"
   }
 }
